somewhat fixed the line overlapping issue...

--- a/front/pgs/style.css
+++ b/front/pgs/style.css
@@ -133,7 +133,7 @@
     color: #3498db;
 }
 .pgs-color2 {
-    color: #9b59b6;
+    color: #000000;
 }
 .pgs-color3 {
     color: #e74c3c;
